# maximal_order_enumeration

./: LICENSE  README.md  maximal_order_enumeration.py  pyproject.toml  requirements.txt  test.py
