[tool.poetry]
name = "maximal_order_enumeration"
version = "0.1.0"
description = ""
authors = ["Munehiro Kobayashi <kobayashi@schilf-institute.co.jp>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.24.1"
scipy = "^1.10.0"
networkx = "^3.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.19.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
